--- a/config-client-example.properties
+++ b/config-client-example.properties
@@ -1,1 +1,3 @@
 server.port=5551
+title=Config Client Example with Spring Boot and Spring Cloud
+message=Hello! This service gets its configuration from a Spring Cloud Config Service
