Se actualiza README y configuracion de servicio cliente

--- a/config-client-example.properties
+++ b/config-client-example.properties
@@ -1,3 +1,4 @@
-server.port=5551
-title=Config Client Example with Spring Boot and Spring Cloud
+server.port=8200
+title=Config Client Example with Spring Boot, Spring Cloud and Retry Library
 message=Hello! This service gets its configuration from a Spring Cloud Config Service
+
